# nucleo-f746zg-microtvm-example

./: .gitmodules  LICENSE  README.md  generate_onnx_model.py  generate_standalone_microtvm.py  run_onnx_on_microtvm.py  run_onnx_on_tvm.py
standalone/: CMakeLists.txt  graph_json.c.inc  inputs.c.inc  model-metadata.c  model.c  prj.conf
standalone/crt-config/: crt_config.h
standalone/src/: main.c
